# pm-bench

./: .gitignore  CONTRIBUTING.md  GOALS.md  README.md  STANDINGS.md  STATUS.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  leaderboard.yml
bench/: seeds.py
leaderboard/: README.md
leaderboard/bottleneck/: synthetic-toy.json
leaderboard/conformance/: synthetic-toy.json
leaderboard/next-event/: synthetic-toy.json
leaderboard/outcome/: synthetic-toy.json
leaderboard/predictions/conformance/synthetic-toy/: dfg-ref.json
leaderboard/remaining-time/: synthetic-toy.json
pm_bench/: __init__.py  _cache.py  _synth.py  bottleneck.py  cache.py  cli.py  conformance.py  fetch.py  io.py  leaderboard.py  leaderboard_schema.py  predictions.py  prefixes.py  registry.py  registry.yml  score.py  split.py  stats.py  xes.py
pm_bench/baselines/: __init__.py  global_rate.py  markov.py  mean_time.py  mean_wait.py  prior_outcome.py  random_rank.py  uniform.py  zero_time.py
tests/: test_baselines.py  test_baselines_units.py  test_bottleneck.py  test_cache.py  test_cli_errors.py  test_compare.py  test_conformance.py  test_e2e.py  test_fetch.py  test_io.py  test_leaderboard.py  test_leaderboard_schema.py  test_outcome.py  test_prefixes.py  test_registry.py  test_remaining_time.py  test_score.py  test_seeds_bench.py  test_split.py  test_stats.py  test_synth.py  test_validate_cli.py  test_xes.py
